# Particle_System_Simulator

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: docs.yml  tests.yml
Simulations/: Gao_et_al.py  Gao_et_al_sweep_dirty.py  Simple_config_round.py
Tutourial/: Poisson's Ratio.ipynb  Tut1.py  Tutorial 1.ipynb  Tutourial2.ipynb
Tutourial/.ipynb_checkpoints/: Scaling laws and the frame-checkpoint.ipynb  Tutorial 1-checkpoint.ipynb
code_Validation/airbag_problem/: airbag_square_cross.py  pillow.geo  pillow2.geo  pillow2.msh
code_Validation/hencky_problem/: hencky_mesh.msh  hencky_mesh_finer_mesh.msh  hencky_problem.py  hencky_problem_finer_mesh.py  hencky_problem_input.py  hencky_problem_input_finer_mesh.py  untitled.msh
code_Validation/inflated_SiN_membrane/: console_tool_mesh_refinement.py  console_tool_plot_diagonal.py  inflated_membrane.py
code_Validation/saddle_form/: saddle_form.py  saddle_form_DOF_figure.py  saddle_form_animated.py  saddle_form_input.py  saddle_form_performance-testing.py
code_Validation/tether_deflection_gravity/: tether_deflection_gravity.py  tether_deflection_gravity_input.py  tether_deflection_gravity_performance-testing.py
code_Validation/tether_deflection_windFlow/: tether_deflection_windFlow.py  tether_deflection_windFlow_input.py  tether_deflection_windFlow_performance-testing.py
code_Validation/tether_longitudal_oscillations/: tether_longitudal_oscillations.py  tether_longitudal_oscillations_input.py
code_Verification/damping_force/: damping_force.py  input_damping_force.py
code_Verification/gravitational_force/: gravitational_force.py  input_gravitational_force.py
code_Verification/spring_force/: input_spring_force.py  spring_force.py
data/kite_example_input/: connectivity_matrix.json  f_external.json  initial_conditions.json  params.json
docs/: Implementation Notes.md
examples/: FEMStructure.py  Gao_et_al.py  Poisson's Ratio.ipynb  SpringElement.py  Tutorial 1.ipynb  Tutorial 1.md  kite_example.py  testing_pulley_functionality.py
examples/Bending_stiffness/: Cantilever.py  Cantilever2D.py  Cantilever3D.py  EulerBeam.py
examples/not_working/: Gao_et_al_sweep_dirty.py  Simple_config_round.py  Tutourial2.ipynb
examples/saddle_form/: saddle_form.py  saddle_form_input.py
site/: 404.html  index.html  sitemap.xml
site/Tutourial/Tutorial 1/: index.html
site/docs/Implementation Notes/: index.html
site/search/: search_index.json
src/Alternative methods/: DSM_practice2.py  DSM_pratice.py  Newton-Rhapson_Co-rotational-formulation.py
src/AnalysisModules/: SystemEnergy.py
src/ExternalForces/: LaserBeam.py  OpticalForceCalculator.py  __init__.py
src/ExternalForces/optical_interpolators/: Mark_2_export.csv  Mark_3_export.csv  Mark_7_export.csv  Mark_9_export.csv  interpolators.py
src/LightSailSim/ExternalForces/: LaserBeam.py  OpticalForceCalculator.py
src/LightSailSim/Mesh/: Mesher.py  mesh_functions.py  mesh_tester.py
src/LightSailSim/particleSystem/: Force.py  ImplicitForce.py  ParticleSystem.py  (+1 more)
src/Mesh/: Mesher.py  mesh_functions.py  mesh_tester.py
src/PSS/: __init__.py  logging_config.py
src/Sim/: simulations.py
src/opticalSystem/: LaserBeam.py
src/particleSystem/: Force.py  ImplicitForce.py  Particle.py  ParticleSystem.py  SpringDamper.py  SystemObject.py  __init__.py
(+48 files in other folders)
