[tool.portray]

modules = [	'src.particleSystem.Particle',
			'src.particleSystem.SpringDamper',
			'src.particleSystem.ParticleSystem',
			'src.ExternalForces.OpticalForceCalculator',
			'src.ExternalForces.LaserBeam',
			'src.Mesh.Mesher']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LightSailSim"
version = "0.1.0"
dependencies = [
"numpy",
"pandas",
"matplotlib",
"scipy",
]

requires-python = ">=3.8"
authors = [
{name = "Mark Kalsbeek"},
]
maintainers = [
{name = "Mark Kalsbeek"}
]
description = "LightSailSim"
readme = "README.md"
keywords = ["Membrane Analysis", "Lightsails"] # Add your desired keywords here
classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python",
"Intended Audience :: Lightsail Designers, Developers",
]

[project.urls]
Repository = "https://github.com/Markk116/LightSailSim/tree/main"