[tool.portray]

modules = [	'src.particleSystem.Particle',
			'src.particleSystem.SpringDamper',
			'src.particleSystem.ParticleSystem',
			'src.ExternalForces.OpticalForceCalculator',
			'src.ExternalForces.LaserBeam',
			'src.Mesh.Mesher']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Particle_System_Simulator"
version = "0.1.0"
dependencies = [
"numpy",
"pandas",
"matplotlib",
"scipy",
]

requires-python = ">=3.8"
authors = [
{name = "Mark Kalsbeek, Jelle Poland, Alexander Batchelor"},
]
maintainers = [
{name = "Mark Kalsbeek, Jelle Poland"}
]
description = "LightSailSim"
readme = "README.md"
keywords = ["Membrane Analysis", "Particle Systems", "Lightsail", "Kite", "Tensile Structures"] # Add your desired keywords here
classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/awegroup/Particle_System_Simulator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Particle_System_Simulator = ["**/*.csv"]
