[tool.portray]

modules = [	'src.particleSystem.Particle',
			'src.particleSystem.SpringDamper',
			'src.particleSystem.ParticleSystem',
			'src.ExternalForces.OpticalForceCalculator',
			'src.ExternalForces.LaserBeam',
			'src.Mesh.Mesher']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PSS"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
{name = "Mark Kalsbeek, Jelle Poland, Alexander Batchelor"},
]
maintainers = [
{name = "Mark Kalsbeek, Jelle Poland"}
]
keywords = ["Membrane Analysis", "Particle Systems", "Lightsail", "Kite", "Tensile Structures"] # Add your desired keywords here

classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python",
"License :: OSI Approved :: MIT License",
]

dependencies = [
"numpy",
"pandas",
"matplotlib",
"scipy",
"sympy",
"ipykernel",
"dill",
"attrs",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  ]


[project.urls]
Repository = "https://github.com/awegroup/Particle_System_Simulator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Particle_System_Simulator = ["**/*.csv"]
